Add publish container job depending on preparing artifacts
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/.azure/release-pipeline.yaml
+++ b/.azure/release-pipeline.yaml
@@ -52,6 +52,7 @@ stages:
   - stage: containers_publish
     displayName: Publish Containers for ${{ parameters.releaseVersion }}
     dependsOn:
+      - prepare_release_artifacts
       - containers_publish_with_suffix
     condition: and(in(dependencies.containers_publish_with_suffix.result, 'Succeeded', 'SucceededWithIssues', 'Skipped'), startsWith(variables['build.sourceBranch'], 'refs/heads/release-'))
     jobs:
