Fixed scholzj comments
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/.azure/release-pipeline.yaml
+++ b/.azure/release-pipeline.yaml
@@ -54,7 +54,7 @@ stages:
     dependsOn:
       - prepare_release_artifacts
       - containers_publish_with_suffix
-    condition: and(in(dependencies.containers_publish_with_suffix.result, 'Succeeded', 'SucceededWithIssues', 'Skipped'), startsWith(variables['build.sourceBranch'], 'refs/heads/release-'))
+    condition: and(in(dependencies.containers_publish_with_suffix.result, 'Succeeded', 'SucceededWithIssues', 'Skipped'), startsWith(variables['build.sourceBranch'], 'refs/heads/release-'), in(dependencies.prepare_release_artifacts.result, 'Succeeded', 'SucceededWithIssues'), startsWith(variables['build.sourceBranch'], 'refs/heads/release-'))
     jobs:
       - template: 'templates/jobs/build/push_containers.yaml'
         parameters:
