fix right engine
Signed-off-by: David Kornel <kornys@outlook.com>

--- a/pom.xml
+++ b/pom.xml
@@ -736,6 +736,11 @@
                 <version>${jupiter.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.junit.platform</groupId>
+                <artifactId>junit-platform-engine</artifactId>
+                <version>${jupiter.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.vertx</groupId>
                 <artifactId>vertx-junit5</artifactId>
                 <version>${vertx-junit5.version}</version>
