--- a/systemtest/pom.xml
+++ b/systemtest/pom.xml
@@ -178,8 +178,8 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
             <scope>compile</scope>
         </dependency>
         <dependency>
