--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,25 +18,25 @@ jobs:
   # Build Strimzi Java code and does basic checks of the PR
   build-strimzi:
     name: Build Strimzi
-    runs-on: ubuntu-latest
+    runs-on: oracle-2cpu-8gb-arm64
     steps:
       - uses: actions/checkout@v5
       - uses: ./.github/actions/build/build-strimzi-binaries
         with:
           mvnArgs: "-B -DskipTests -Dmaven.javadoc.skip=true"
-          runnerArch: "amd64"
+          runnerArch: "arm64"
 
   # Runs Strimzi unit and integration tests
   test-strimzi:
     name: Strimzi Unit & IT tests
     needs:
       - build-strimzi
-    runs-on: ubuntu-latest
+    runs-on: oracle-vm-4cpu-16gb-arm64
     steps:
       - uses: actions/checkout@v5
       - uses: ./.github/actions/build/test-strimzi
         with:
-          runnerArch: "amd64"
+          runnerArch: "arm64"
 
   # Builds Strimzi docs
   build-docs:
@@ -63,13 +63,13 @@ jobs:
           - arm64
           - s390x
           - ppc64le
-    runs-on: ubuntu-latest
+    runs-on: oracle-vm-2cpu-8gb-arm64
     steps:
       - uses: actions/checkout@v5
       - uses: ./.github/actions/build/containers-build
         with:
           architecture: ${{ matrix.architecture }}
-          runnerArch: "amd64"
+          runnerArch: "arm64"
 
 # The following jobs are used to push artifacts into respective services
 # Uncomment them once we want to migrate from Azure to GHA
