Revert "TESTING - revert this - determine-ref change"
This reverts commit c9d617f3ca95e9b068afe9e69fb9f0158239d60d.

Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -58,8 +58,7 @@ jobs:
     steps:
       - name: Determine checkout ref
         id: determine_ref
-        # uses: strimzi/strimzi-kafka-operator/.github/actions/utils/determine-ref@main
-        uses: frawless/strimzi-kafka-operator/.github/actions/utils/determine-ref@use-build-artifacts
+        uses: strimzi/strimzi-kafka-operator/.github/actions/utils/determine-ref@main
       - name: Parse Comment
         id: parse
         uses: strimzi/strimzi-kafka-operator/.github/actions/systemtests/parse-comment@main
