--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - "main"
       - "release-*"
+      - "keyless-image-sign"
   pull_request:
     branches:
       - "*"
@@ -18,25 +19,25 @@ jobs:
   # Build Strimzi Java code and does basic checks of the PR
   build-strimzi:
     name: Build Strimzi
-    runs-on: oracle-2cpu-8gb-arm64
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - uses: ./.github/actions/build/build-strimzi-binaries
         with:
           mvnArgs: "-B -DskipTests -Dmaven.javadoc.skip=true"
-          runnerArch: "arm64"
+          runnerArch: "amd64"
 
   # Runs Strimzi unit and integration tests
-  test-strimzi:
-    name: Strimzi Unit & IT tests
-    needs:
-      - build-strimzi
-    runs-on: oracle-vm-4cpu-16gb-arm64
-    steps:
-      - uses: actions/checkout@v5
-      - uses: ./.github/actions/build/test-strimzi
-        with:
-          runnerArch: "arm64"
+#  test-strimzi:
+#    name: Strimzi Unit & IT tests
+#    needs:
+#      - build-strimzi
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v5
+#      - uses: ./.github/actions/build/test-strimzi
+#        with:
+#          runnerArch: "amd64"
 
   # Builds Strimzi docs
   build-docs:
@@ -63,41 +64,42 @@ jobs:
           - arm64
           - s390x
           - ppc64le
-    runs-on: oracle-vm-2cpu-8gb-arm64
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - uses: ./.github/actions/build/containers-build
         with:
           architecture: ${{ matrix.architecture }}
-          runnerArch: "arm64"
+          runnerArch: "amd64"
 
-# The following jobs are used to push artifacts into respective services
-# Uncomment them once we want to migrate from Azure to GHA
-#  # Push Strimzi containers - run only on main branch
-#  push-containers:
-#    name: Push Containers
-#    needs:
-#      - build-strimzi
+  # Push Strimzi containers - run only on main branch
+  push-containers:
+    name: Push Containers
+    needs:
+      - build-strimzi
 #      - test-strimzi
-#      - build-containers
-#      - build-docs
-#    if: ${{ github.ref == 'refs/heads/gha-build' }}
-#    runs-on: ubuntu-latest
-#    env:
-#      DOCKER_REGISTRY: "quay.io"
-#      DOCKER_ORG: "strimzi"
-#      DOCKER_TAG: "latest"
-#    steps:
-#      - uses: actions/checkout@v5
-#      - uses: ./.github/actions/build/containers-push
-#        with:
-#          architectures: "amd64,arm64,ppc64le,s390x"
-#          runnerArch: "amd64"
-#          quayUser: ${{ secrets.QUAY_USER }}
-#          quayPass: ${{ secrets.QUAY_PASS }}
-#          cosignPassword: ${{ secrets.COSIGN_PASSWORD }}
-#          cosignPrivateKey: ${{ secrets.COSIGN_PRIVATE_KEY }}
-#
+      - build-containers
+      - build-docs
+    if: ${{ github.ref == 'refs/heads/keyless-image-sign' }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      # Required for keyless signing with GitHub OIDC
+      id-token: write
+    env:
+      DOCKER_REGISTRY: "quay.io"
+      DOCKER_ORG: "jstejska"
+      DOCKER_TAG: "latest"
+    steps:
+      - uses: actions/checkout@v5
+      - uses: ./.github/actions/build/containers-push
+        with:
+          architectures: "amd64,arm64,ppc64le,s390x"
+          runnerArch: "amd64"
+          quayUser: ${{ secrets.QUAY_USER }}
+          quayPass: ${{ secrets.QUAY_PASS }}
+
 #  # Publish Strimzi docs to the website - run only on main branch
 #  publish-docs:
 #    name: Publish Docs
@@ -107,7 +109,7 @@ jobs:
 #      - build-containers
 #      - build-docs
 #    if: ${{ github.ref == 'refs/heads/main' }}
-#    runs-on: oracle-2cpu-8gb-x86_64
+#    runs-on: ubuntu-latest
 #    steps:
 #      - uses: actions/checkout@v5
 #      - uses: ./.github/actions/build/publish-docs
@@ -124,7 +126,7 @@ jobs:
 #      - build-containers
 #      - build-docs
 #    if: ${{ github.ref == 'refs/heads/main' }}
-#    runs-on: oracle-2cpu-8gb-x86_64
+#    runs-on: ubuntu-latest
 #    steps:
 #      - uses: actions/checkout@v5
 #      - uses: ./.github/actions/build/deploy-java
