--- a/docker-images/base/Makefile
+++ b/docker-images/base/Makefile
@@ -18,10 +18,22 @@ docker_push_manifest:
 docker_sign_manifest:
 	# Do nothing
 
+# TODO - remove gha prefix once migrated fully to gha
+docker_gha_sign_manifest:
+	# Do nothing
+
 docker_sbom:
 	# Do nothing
 
 docker_push_sbom:
+	# Do nothing
+
+# TODO - remove gha prefix once migrated fully to gha
+docker_gha_sbom:
+	# Do nothing
+
+# TODO - remove gha prefix once migrated fully to gha
+docker_gha_push_sbom:
 	# Do nothing
 
 .PHONY: build clean release
