Review comments PM
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/048-Crd-kafkamirrormaker2.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/048-Crd-kafkamirrormaker2.yaml
@@ -324,7 +324,7 @@ spec:
                       description: The name of the Kafka topic where connector configurations are stored. Required.
                     statusStorageTopic:
                       type: string
-                      description: The name of the Kafka topic where connector and task status are stored. Required.
+                      description: The name of the Kafka topic where connector and task statuses are stored. Required.
                     offsetStorageTopic:
                       type: string
                       description: The name of the Kafka topic where source connector offsets are stored. Required.
