--- a/.azure/templates/steps/maven_cache.yaml
+++ b/.azure/templates/steps/maven_cache.yaml
@@ -1,7 +1,7 @@
 steps:
   - task: Cache@2
     inputs:
-      key: 'maven-cache | $(System.JobName) | **/pom.xml'
+      key: 'maven-cache2 | $(System.JobName) | **/pom.xml'
       restoreKeys: |
         maven-cache | $(System.JobName)
         maven-cache
