Try to fix path to file
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/.github/actions/utils/compare-merge-commit/action.yml
+++ b/.github/actions/utils/compare-merge-commit/action.yml
@@ -141,6 +141,8 @@ runs:
       with:
         name: commit-sha.txt
         run-id: ${{ steps.find-build.outputs.run_id }}
+        github-token: ${{ github.token }}
+        path: .
 
     - name: Compare commit SHA
       id: compare-sha
