--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -100,7 +100,8 @@ jobs:
           ref: ${{ needs.parse-params.outputs.ref }}
       - name: Get merge commit SHA
         id: get-merge-sha
-        run: echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+        run: |
+          echo "sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
       - name: Compare merge-commit sha
         id: verify
         uses: ./.github/actions/utils/compare-merge-commit
