Revert "TESTING - revert this"
This reverts commit 58594db388e69eadb6b43f841a54b2dca3a2d707.

Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -193,7 +193,7 @@ jobs:
         needs.parse-params.outputs.releaseVersion == 'latest' &&
         needs.check-build.outputs.buildRunId == ''
       }}
-    runs-on: ubuntu-latest
+    runs-on: oracle-2cpu-8gb-arm64
     steps:
       - uses: actions/checkout@v5
         with:
@@ -201,7 +201,7 @@ jobs:
       - uses: ./.github/actions/build/build-strimzi-binaries
         with:
           mvnArgs: "-B -DskipTests -Dmaven.javadoc.skip=true"
-          runnerArch: "amd64"
+          runnerArch: "arm64"
 
   build-images:
     name: build-images
@@ -224,7 +224,7 @@ jobs:
     strategy:
       matrix:
         architecture: [amd64, arm64]
-    runs-on: ubuntu-latest
+    runs-on: oracle-vm-2cpu-8gb-arm64
     steps:
       - uses: actions/checkout@v5
         with:
@@ -232,7 +232,7 @@ jobs:
       - uses: ./.github/actions/build/containers-build
         with:
           architecture: ${{ matrix.architecture }}
-          runnerArch: "amd64"
+          runnerArch: "arm64"
 
   run-tests:
     name: run-tests
