--- a/.github/workflows/system-tests.yml
+++ b/.github/workflows/system-tests.yml
@@ -84,15 +84,49 @@ jobs:
         with:
           ref: ${{ needs.parse-params.outputs.ref }}
 
+  check-build:
+    needs:
+      - check-rights
+      - parse-params
+    if: |-
+      ${{ always() &&
+        (needs.check-rights.result == 'success' || github.event_name == 'pull_request') &&
+        needs.parse-params.outputs.shouldRun == 'true' 
+      }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    outputs:
+      buildRunId: ${{ steps.verify.outputs.buildRunId }}
+      buildMetadataSha: ${{ steps.verify.outputs.buildMetadataSha }}
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          ref: ${{ needs.parse-params.outputs.ref }}
+      - name: Get merge commit SHA
+        id: get-merge-sha
+        run: |
+          echo "sha=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
+      - name: Compare merge-commit sha
+        id: verify
+        uses: ./.github/actions/utils/compare-merge-commit
+        with:
+          waitForBuild: "true"
+          maxWaitMinutes: "60"
+          mergeCommitSha: ${{ steps.get-merge-sha.outputs.sha }}
+          commitSha: ${{ needs.parse-params.outputs.sha }}
+
   generate-matrix:
     needs:
       - parse-params
       - check-rights
+      - check-build
     if: |-
-      ${{ 
-        always() && 
-        needs.parse-params.outputs.shouldRun == 'true' && 
-        (needs.check-rights.result == 'success' || github.event_name == 'pull_request')
+      ${{
+        always() &&
+        needs.parse-params.outputs.shouldRun == 'true' &&
+        (needs.check-rights.result == 'success' || github.event_name == 'pull_request') &&
+        needs.check-build.result == 'success'
       }}
     runs-on: ubuntu-latest
     permissions:
@@ -147,19 +181,81 @@ jobs:
           checkName: "System tests verification"
           checkDescription: "Check for overall system test verification"
 
+  build-artifacts:
+    name: build-artifacts
+    needs:
+      - parse-params
+      - check-rights
+      - generate-matrix
+      - check-build
+    # Run only if properly triggered, permissions check passed, matrix is valid, and the run is not for release (already built images)
+    if: |-
+      ${{ 
+        always() &&needs.parse-params.outputs.shouldRun == 'true' && 
+        (needs.check-rights.result == 'success' || github.event_name == 'pull_request') && 
+        needs.generate-matrix.outputs.isValid == 'true' && 
+        needs.parse-params.outputs.releaseVersion == 'latest' &&
+        needs.check-build.outputs.buildRunId == ''
+      }}
+    runs-on: oracle-2cpu-8gb-arm64
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          ref: ${{ needs.parse-params.outputs.ref }}
+      - uses: ./.github/actions/build/build-strimzi-binaries
+        with:
+          mvnArgs: "-B -DskipTests -Dmaven.javadoc.skip=true"
+          runnerArch: "arm64"
+
+  build-images:
+    name: build-images
+    needs:
+      - parse-params
+      - check-rights
+      - generate-matrix
+      - check-build
+      - build-artifacts
+    # Run only if properly triggered, permissions check passed, matrix is valid, and the run is not for release (already built images)
+    if: |-
+      ${{ 
+        always() &&needs.parse-params.outputs.shouldRun == 'true' && 
+        (needs.check-rights.result == 'success' || github.event_name == 'pull_request')&& 
+        needs.generate-matrix.outputs.isValid == 'true' && 
+        needs.parse-params.outputs.releaseVersion == 'latest' && 
+        needs.build-artifacts.result != 'failure' &&
+        needs.check-build.outputs.buildRunId == ''
+      }}
+    strategy:
+      matrix:
+        architecture: [amd64, arm64]
+    runs-on: oracle-vm-2cpu-8gb-arm64
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          ref: ${{ needs.parse-params.outputs.ref }}
+      - uses: ./.github/actions/build/containers-build
+        with:
+          architecture: ${{ matrix.architecture }}
+          runnerArch: "arm64"
+
   run-tests:
     name: run-tests
     needs:
       - parse-params
       - check-rights
+      - check-build
       - generate-matrix
+      - build-artifacts
+      - build-images
     # Run if properly triggered, permissions check passed, matrix is valid, and build jobs succeeded or were skipped
     if: |-
       ${{
         always() &&
         needs.parse-params.outputs.shouldRun == 'true' &&
-        (needs.check-rights.result == 'success' || github.event_name == 'pull_request')&&
-        needs.generate-matrix.outputs.isValid == 'true'
+        (needs.check-rights.result == 'success' || github.event_name == 'pull_request') &&
+        needs.generate-matrix.outputs.isValid == 'true' &&
+        needs.check-build.result == 'success' &&
+        (needs.build-images.result == 'success' || needs.build-images.result == 'skipped')
       }}
     # Job needs write rights for setting statuses on pull-requests
     permissions:
@@ -176,6 +272,8 @@ jobs:
       sha: ${{ needs.parse-params.outputs.sha }}
       # Pass the validated matrix directly
       matrix: ${{ needs.generate-matrix.outputs.matrix }}
+      # Build verification outputs
+      buildRunId: ${{ needs.check-build.outputs.buildRunId }}
 
   report:
     needs:
