Continue STs workflow when commit-sha.txt doesn't exist
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/.github/actions/utils/compare-merge-commit/action.yml
+++ b/.github/actions/utils/compare-merge-commit/action.yml
@@ -137,6 +137,8 @@ runs:
           core.info(`Build URL: ${context.serverUrl}/${owner}/${repo}/actions/runs/${buildRun.id}`);
 
     - name: Download build metadata
+      id: download-metadata
+      continue-on-error: true
       uses: actions/download-artifact@v4
       with:
         name: commit-sha.txt
