--- a/.github/workflows/run-system-tests.yml
+++ b/.github/workflows/run-system-tests.yml
@@ -89,7 +89,6 @@ jobs:
         with:
           distribution: "temurin"
           java-version: "17"
-          cache: 'maven'
 
       - name: Install Helm
         uses: ./.github/actions/dependencies/install-helm
@@ -166,14 +165,13 @@ jobs:
           architecture: ${{ matrix.config.arch }}
           registry: "kind"
 
-      - name: Cache local Maven repository
-        uses: actions/cache@v4
+      - name: Restore Maven cache
+        uses: actions/cache/restore@v4
         with:
           path: ~/.m2/repository
-          key: "maven-cache | **/pom.xml"
+          key: maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
-            maven | ${{ github.job }}
-            maven
+            maven-
 
       # Build Strimzi without images => used when running the STs against releases or release candidates where the images
       # are already built, and we need only the Java build
