Switch build from Azure Pipelines to GitHub Actions
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/.azure/build-pipeline.yaml
+++ b/.azure/build-pipeline.yaml
@@ -58,59 +58,59 @@ stages:
           architectures: ['amd64', 'arm64', 's390x', 'ppc64le']
 
   # Push Strimzi containers -> run only on main branch
-  - stage: push_containers
-    displayName: Push Containers
-    dependsOn:
-      - build_strimzi
-      - test_strimzi
-      - build_containers
-      - build_docs
-    condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/main'))
-    jobs:
-      - template: 'templates/jobs/build/push_containers.yaml'
-        parameters:
-          dockerTag: 'latest'
-          artifactSource: 'current'
-          artifactProject: 'strimzi'
-          artifactPipeline: ''
-          artifactRunVersion: ''
-          artifactRunId: ''
-          architectures: ['amd64', 'arm64', 's390x', 'ppc64le']
-
-  # Publish Strimzi docs to the website -> run only on main branch
-  - stage: public_docs
-    displayName: Publish Docs
-    dependsOn:
-      - build_strimzi
-      - test_strimzi
-      - build_containers
-      - build_docs
-    condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/main'))
-    jobs:
-      - template: 'templates/jobs/build/publish_docs.yaml'
-        parameters:
-          dockerTag: 'latest'
-          artifactSource: 'current'
-          artifactProject: 'strimzi'
-          artifactPipeline: ''
-          artifactRunVersion: ''
-          artifactRunId: ''
-
-  # Deploy Strimzi Java artifacts -> run only on main branch (where it deploys to OSS snapshot repos)
-  - stage: deploy_strimzi_java
-    displayName: Deploy Java artifacts
-    dependsOn:
-      - build_strimzi
-      - test_strimzi
-      - build_containers
-      - build_docs
-    condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/main'))
-    jobs:
-      - template: 'templates/jobs/build/deploy_strimzi_java.yaml'
-        parameters:
-          dockerTag: 'latest'
-          artifactSource: 'current'
-          artifactProject: 'strimzi'
-          artifactPipeline: ''
-          artifactRunVersion: ''
-          artifactRunId: ''
+#  - stage: push_containers
+#    displayName: Push Containers
+#    dependsOn:
+#      - build_strimzi
+#      - test_strimzi
+#      - build_containers
+#      - build_docs
+#    condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/main'))
+#    jobs:
+#      - template: 'templates/jobs/build/push_containers.yaml'
+#        parameters:
+#          dockerTag: 'latest'
+#          artifactSource: 'current'
+#          artifactProject: 'strimzi'
+#          artifactPipeline: ''
+#          artifactRunVersion: ''
+#          artifactRunId: ''
+#          architectures: ['amd64', 'arm64', 's390x', 'ppc64le']
+#
+#  # Publish Strimzi docs to the website -> run only on main branch
+#  - stage: public_docs
+#    displayName: Publish Docs
+#    dependsOn:
+#      - build_strimzi
+#      - test_strimzi
+#      - build_containers
+#      - build_docs
+#    condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/main'))
+#    jobs:
+#      - template: 'templates/jobs/build/publish_docs.yaml'
+#        parameters:
+#          dockerTag: 'latest'
+#          artifactSource: 'current'
+#          artifactProject: 'strimzi'
+#          artifactPipeline: ''
+#          artifactRunVersion: ''
+#          artifactRunId: ''
+#
+#  # Deploy Strimzi Java artifacts -> run only on main branch (where it deploys to OSS snapshot repos)
+#  - stage: deploy_strimzi_java
+#    displayName: Deploy Java artifacts
+#    dependsOn:
+#      - build_strimzi
+#      - test_strimzi
+#      - build_containers
+#      - build_docs
+#    condition: and(succeeded(), eq(variables['build.sourceBranch'], 'refs/heads/main'))
+#    jobs:
+#      - template: 'templates/jobs/build/deploy_strimzi_java.yaml'
+#        parameters:
+#          dockerTag: 'latest'
+#          artifactSource: 'current'
+#          artifactProject: 'strimzi'
+#          artifactPipeline: ''
+#          artifactRunVersion: ''
+#          artifactRunId: ''
