TESTING - revert this
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,7 +112,7 @@ jobs:
       id-token: write  # Required for keyless signing with GitHub OIDC
     env:
       DOCKER_REGISTRY: "quay.io"
-      DOCKER_ORG: "strimzi"
+      DOCKER_ORG: "jstejska"
       DOCKER_TAG: "${{ inputs.releaseVersion }}"
     steps:
       - uses: actions/checkout@v5
